# bot

./: .bandit  .dockerignore  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .semgrepignore  .trivyignore  ARCHITECTURE.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  Dockerfile.cpu  Dockerfile.gptoss  INSTALL_LOG_FIXES.md  LICENSE  README.md  REPORT.md  __init__.py  bcrypt.py  bybit_sdk.py  cache.py  check_code.py  codeql-config.yml  component-detection  config.example.json  config.json  config.py  data_handler.py  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml  dotenv.py  exceptiongroup.py  flask.py  flask_stub.py  github_registries_proxy.json  (+45 more)
.github/: codeql.yml  copilot-instructions.md  dependabot.yml  registries-proxy.json  release-drafter.yml
.github/codeql/: codeql-config.yml
.github/workflows/: bandit.yml  ci.yml  ci_cpu.yml  codeql.yml  dependabot.yml  dependency-graph-auto-submission-retry.yml  dependency-graph-auto-submission.yml  dependency-graph.yml  dependency-submission.yml  docker-publish.yml  gptoss_review.yml  gptoss_review_gpu.yml  publish.yml  release-drafter.yml  secret-scan.yml  semgrep.yml  stale.yml  submit-pypi.yml  tests.yml  trivy.yml
bot/: __init__.py  _core_utils.py  config.json  data_handler.py  dotenv_utils.py  host_utils.py  model_builder.py  portfolio_backtest.py  pydantic_compat.py  ray_compat.py  shared_utils.py  simulation.py  trade_manager.py  trading_bot.py  utils.py  utils_compat.py  utils_loader.py
bot/logging/: __init__.py  configure.py
bot/portfolio/: __init__.py  portfolio_backtest.py  position_manager.py
bot/services/: data_handler_service.py
bot/simulation/: __init__.py  simulation.py
bot/trade_manager/: __init__.py  core.py  errors.py  order_utils.py  server_common.py  service.py
colorama/: __init__.py
config/: __init__.py
data_handler/: __init__.py  api.py  core.py  feature_engineering.py  offline.py  storage.py  utils.py
docker/config-wsl/: config.json
docker/patches/: linux-pam-CVE-2024-10041.patch  linux-pam-CVE-2024-10963.patch  linux-pam-doc-messaging.patch  linux-pam-hardening.patch
docker/scripts/: build_patched_pam.sh  build_security_base_image.sh  harden_gnutar.sh  (+3 more)
dotenv/: __init__.py
fastapi_csrf_protect/: __init__.py
flask/: __init__.py  typing.py
gptoss_check/: check_code.py  main.py
model_builder/: __init__.py  api.py  core.py  offline.py  storage.py  validation.py
models/: architectures.py
pip_audit/: __init__.py  __main__.py
polars/: __init__.py
scripts/: _filesystem.py  check_cve_2020_14356.sh  check_pr_status.py  check_subuid_conflict.sh  disable_desktop_credential_helper.py  docker_compose_wsl.sh  ensure_semgrep_sarif.py  github_path_resolver.py  github_path_resolver_fallback.py  github_paths.py  gptoss_mock_server.py  health_check.py  install-test-deps.sh  measure_rate.py  prepare_gptoss_diff.py  run_data_handler_service.sh  run_dependabot.sh  run_gptoss_review.py  run_pip_audit.py  run_simulation.py  setup-tests.sh  submit_dependency_snapshot.py  trivy_sarif_summary.py
services/: data_handler_service.py  docker-compose.yml  exchange_provider.py  logging_utils.py  model_builder_service.py  offline.py  schemas.py  service_factories.py  stubs.py  trade_manager_service.py
telegram/: __init__.py  error.py
tests/: conftest.py  helpers.py  test_backtest_loop.py  test_cache.py  test_check_pr_status.py  test_component_detection.py  test_config_env.py  test_config_external_path.py  test_config_file_security.py  test_config_list_parsing.py  test_config_logging.py  test_data_handler.py  test_data_handler_cache_dir.py  test_data_handler_offline_import.py  test_data_handler_polars.py  test_data_handler_service_auth.py  test_data_handler_service_concurrency.py  test_data_handler_service_logging.py  test_data_handler_service_not_found.py  test_dependency_graph_workflow.py  test_dependency_snapshot.py  test_dependency_snapshot_import.py  test_dependency_snapshot_parser.py  test_dockerhub_push.py  test_env_parsers.py  test_env_parsing.py  test_environment_behaviour.py  test_exchange_provider.py  test_flask_stub.py  test_force_cpu.py  test_github_paths.py  test_gpt_client.py  test_gpt_client_stub.py  test_gpt_integration.py  test_gptoss_check.py  test_gptoss_mock_server.py  test_gptoss_workflow_python3.py  test_gpu_disabled.py  test_health_check.py  test_http_client_cleanup.py  (+87 more)
trade_manager/: __init__.py
transformers/: __init__.py
(+20 files in other folders)
