[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot-x"
version = "0.1.1"
description = "Пример торгового бота на Python."
readme = "README.md"
license = { file = "LICENSE" }
license-files = ["LICENSE"]
authors = [{ name = "Project Authors" }]
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "flask>=3.0.2",
    "httpx>=0.27.0",
    "fastapi>=0.116.1",
    "aiohttp>=3.12.15",
    "pandas>=2.3.2",
    "numpy>=2.3.3",
    "pydantic>=2.11.7",
]

[tool.setuptools]
packages = ["bot", "services", "data_handler"]
py-modules = [
  "cache",
  "config",
  "gpt_client",
  "http_client",
  "model_builder",
  "model_builder_client",
  "optimizer",
  "password_utils",
  "portfolio_backtest",
  "position_manager",
  "safe_html_parser",
  "server",
  "simulation",
  "strategy_optimizer",
  "telegram_logger",
  "trade_manager",
  "trading_bot",
  "test_stubs",
  "utils"
]
