[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot-x"
version = "0.1.1"
description = "Пример торгового бота на Python."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Project Authors" }]
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "a2wsgi>=1.4",
    "aiohttp>=3.12.15",
    "bcrypt>=4.2.0",
    "ccxt==4.5.6",
    "cloudpickle>=3.1",
    "cryptography>=42.0.0",
    "fastapi>=0.116.1",
    "fastapi-csrf-protect>=1.0.7",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "gymnasium>=0.29.1",
    "httpx>=0.27.0",
    "imbalanced-learn>=0.12.3",
    "joblib>=1.4.2",
    "jsonschema==4.25.1",
    "numpy>=2.2.6",
    "numba>=0.61.0",
    "openai==1.109.1",
    "pandas>=2.2.2",
    "polars>=0.20.16",
    "psutil>=7.1.0",
    "pyarrow>=16.1.0",
    "pybit>=5.11.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=20.7",
    "pytorch-lightning>=2.5.2",
    "scikit-learn>=1.5.1",
    "scipy>=1.13.1",
    "setuptools>=78.1.1,<81",
    "shap>=0.46.0",
    "stable-baselines3==2.7.0",
    "statsmodels>=0.14.2",
    "ta>=0.11.0",
    "transformers==4.56.2",
    "websockets>=12.0",
    "pytest-asyncio>=1.1",
    "backports-asyncio-runner==1.2.0; python_version < \"3.11\"",
]

[tool.setuptools]
packages = ["bot", "services", "data_handler"]
py-modules = [
  "cache",
  "config",
  "gpt_client",
  "http_client",
  "model_builder",
  "model_builder_client",
  "optimizer",
  "password_utils",
  "portfolio_backtest",
  "position_manager",
  "safe_html_parser",
  "server",
  "simulation",
  "security",
  "strategy_optimizer",
  "telegram_logger",
  "trade_manager",
  "trading_bot",
  "test_stubs",
  "utils"
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
per-file-ignores = {"tests/*" = ["E402"]}
