[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot-x"
version = "0.1.1"
description = "Пример торгового бота на Python."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Project Authors" }]
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "flask>=3.0.2",
    "httpx>=0.27.0",
    "fastapi>=0.118.2",
    "starlette>=0.49.1,<0.50",
    "aiohttp>=3.13.0",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "pydantic>=2.12.0",
    "cloudpickle>=3.1",
    "python-dotenv>=1.0.1",
]

[tool.setuptools]
packages = { find = { include = [
    "bot*",
    "data_handler*",
    "model_builder*",
    "models*",
    "pip_audit*",
    "services*",
    "trade_manager*",
    "transformers*",
    "gptoss_check*",
] } }
py-modules = [
  "cache",
  "config",
  "gpt_client",
  "http_client",
  "model_builder_client",
  "optimizer",
  "password_utils",
  "safe_html_parser",
  "server",
  "security",
  "strategy_optimizer",
  "telegram_logger",
  "trading_bot",
  "test_stubs",
  "utils"
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
per-file-ignores = {"tests/*" = ["E402"]}

[tool.pip-tools]
pip-args = ["--extra-index-url", "https://download.pytorch.org/whl/cpu"]
strip-extras = true
